# slackabet

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  RELEASING.md  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: labels.yml
.github/workflows/: deploy.yml  labels.yml  lint.yml  release-drafter.yml  test.yml
src/slackabet/: __init__.py  cli.py
tests/: test_slackabet.py
