[metadata]
name = slackabet
description = Convert text into Slack alphabet emoji
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hugovk/slackabet
author = Hugo van Kemenade
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Artistic Software
    Topic :: Text Processing
keywords =
    CLI
    converter
    convert
    text
    Slack
    alphabet
    emoji
project_urls =
    Source=https://github.com/hugovk/slackabet

[options]
packages = find:
install_requires =
    pyperclip;platform_system != "Linux"
python_requires = >=3.7
package_dir = =src
setup_requires =
    setuptools-scm
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    slackabet = slackabet.cli:main

[options.extras_require]
tests =
    hypothesis-auto
    pytest
    pytest-cov

[flake8]
max_line_length = 88
